# taurophone

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml
src/: App.tsx  History.tsx  Settings.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  doubletap.rs  lib.rs  settings.rs  text_inject.rs  whisper.rs
