[package]
name = "taurophone"
version = "0.1.0"
description = "Taurophone - Speech-to-Text Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

# Audio recording
cpal = "0.15"
hound = "3.5"

# HTTP client for Whisper API
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }

# Clipboard
arboard = "3"

# Config storage
dirs = "5"

# Global key event listening for double-tap detection
rdev = "0.5"

# Time handling for history timestamps
chrono = { version = "0.4", features = ["serde"] }
